--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
         <h2 class="efeito-digitar">Ta com fome ? Pede uma PizzaHub !</h2>
 
         <div class="btn">
-            <a href="carrinho."><button class="delivery">DELIVERY</button></a>
+            <a href="carrinho.html"><button class="delivery">DELIVERY</button></a>
             <a href="https://www.google.com.br/maps/@-23.5057205,-46.4297036,15z?entry=ttu" target="_blank"><button class="retirar">ENCONTRE UMA LOJA</button></a>
         </div>
     </div>
